Fix title getting cut off

--- a/public/res/index.css
+++ b/public/res/index.css
@@ -63,7 +63,6 @@ h6 {
 
 #title {
   font-size: 30vw;
-  line-height: 1;
   background-size: cover;
   background-clip: text;
   -webkit-background-clip: text;
